Dando estilo a página

--- a/html/test.html
+++ b/html/test.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
 </head>
 <body>
+
+    <section class ="content">
+        <h1>Pokedex</h1>
+        <ol class="pokemons">
+            <li>Bulbasaur</li>
+            <li>Ivysaur</li>
+            <li>Venusaur</li>
+            <li>Charmander</li>
+            <li>Charmeleon</li>
+            <li>Charizard</li>
+        </ol>
+    </section>
+
     <script src="js/main.js"></script>
 </body>
 </html>
