--- a/html/test.html
+++ b/html/test.html
@@ -13,12 +13,24 @@
     <section class ="content">
         <h1>Pokedex</h1>
         <ol class="pokemons">
-            <li>Bulbasaur</li>
-            <li>Ivysaur</li>
-            <li>Venusaur</li>
-            <li>Charmander</li>
-            <li>Charmeleon</li>
-            <li>Charizard</li>
+            <li>Bulbasaur
+                <img class="img" src="https://upload.wikimedia.org/wikipedia/it/thumb/4/43/Bulbasaur.png/600px-Bulbasaur.png?20201031185635" alt="Bulbasaur">
+            </li>
+            <li>Ivysaur
+                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png" alt="Ivysaur">
+            </li>
+            <li>Venusaur
+                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur">
+            </li>
+            <li>Charmander
+                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png" alt="Charmander">
+            </li>
+            <li>Charmeleon
+                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/005.png" alt="Charmeleon">
+            </li>
+            <li>Charizard
+                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="Charizard">
+            </li>
         </ol>
     </section>
 
