--- a/html/test.html
+++ b/html/test.html
@@ -13,23 +13,16 @@
     <section class ="content">
         <h1>Pokedex</h1>
         <ol class="pokemons">
-            <li>Bulbasaur
-                <img class="img" src="https://upload.wikimedia.org/wikipedia/it/thumb/4/43/Bulbasaur.png/600px-Bulbasaur.png?20201031185635" alt="Bulbasaur">
-            </li>
-            <li>Ivysaur
-                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png" alt="Ivysaur">
-            </li>
-            <li>Venusaur
-                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur">
-            </li>
-            <li>Charmander
-                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png" alt="Charmander">
-            </li>
-            <li>Charmeleon
-                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/005.png" alt="Charmeleon">
-            </li>
-            <li>Charizard
-                <img class="img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="Charizard">
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+                <div class="detail">  
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol> 
+                    <img class="img" src="https://upload.wikimedia.org/wikipedia/it/thumb/4/43/Bulbasaur.png/600px-Bulbasaur.png?20201031185635" alt="Bulbasaur">
+                </div>
             </li>
         </ol>
     </section>
